# idloader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  quake.ini  tox.ini
docs/source/: api_docs.rst  conf.py  index.rst
idloader/: database.py  doom  game.py  idloader.py  main.py  qsql.py  quake.py
idloader/redux/: demo.py
tests/: test_boilersnake.py  test_foo.py  test_idloader.py
